--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -45,7 +45,7 @@
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="">Home</a>
                         <a class="dropdown-item" href="">My Portfolio</a>
-                        <a class="dropdown-item" href="{% url 'portfolio_create' %}">
+                        <a class="dropdown-item" href="">
                             <i class="fas fa-plus"></i> Portfolio</a>
                         <a class="dropdown-item" href="">
                             <i class="fas fa-edit"></i> Portfolio</a>
