--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -44,8 +44,8 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="">Home</a>
-                        <a class="dropdown-item" href="">My Portfolio</a>
-                        <a class="dropdown-item" href="">
+                        <a class="dropdown-item" href="{% url 'portfolio' %}">My Portfolio</a>
+                        <a class="dropdown-item" href="{% url 'portfolio_create' %}">
                             <i class="fas fa-plus"></i> Portfolio</a>
                         <a class="dropdown-item" href="">
                             <i class="fas fa-edit"></i> Portfolio</a>
