--- a/main_app/templates/main_app/portfolio_detail.html
+++ b/main_app/templates/main_app/portfolio_detail.html
@@ -5,8 +5,8 @@
 
 
 
-{% for photo in portfolio_photo.photo_set.all %}
-    <img class="responsive-img card-panel" src="{{photo.url}}">
+{% for photo in portfolio.photo_set.all %}
+<img class="responsive-img" src="{{portfolio.photo_url}}">
     {% empty %}
     <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
