--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><i class="fas fa-briefcase"></i> Briefcase</a>
+            <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-briefcase"></i> Briefcase</a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <form class="form-inline my-2 my-lg-0">
@@ -36,20 +36,23 @@
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </li>
-                {% if user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                 <div class="btn-group">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <i class="fas fa-bars"></i>
                     </button>
                     <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="">Home</a>
-                        <a class="dropdown-item" href="{% url 'user_profile' user.id %}">User Profile</a>
+                        <a class="dropdown-item" href="{% url 'home' %}">Home</a>
+                        <a class="dropdown-item" href="{% url 'user_profile' request.user.id %}">User Profile</a>
                         <a class="dropdown-item" href="{% url 'portfolio' %}">My Portfolio</a>
+                        {% if request.user.portfolio == '' %}
                         <a class="dropdown-item" href="{% url 'portfolio_create' %}">
                             <i class="fas fa-plus"></i> Portfolio</a>
+                        {% else %}
                         <a class="dropdown-item" href="">
                             <i class="fas fa-edit"></i> Portfolio</a>
+                        {% endif %}
                         <a class="dropdown-item" href="" >
                             <i class="fas fa-plus"></i> Project</a>
                         <a class="dropdown-item" href="{% url 'logout' %}">
