updated styling on home and user_profile pages

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,9 +2,17 @@
 {% block content %}
 
 <h1>Carousel</h1>
-<h1>Portfolio Links</h1>
-{% for user in users %}
-<p>{{user.first_name}} {{user.last_name}}<p>
-    <a href="{% url 'user_profile' user.id %}"><button type="button" class="btn btn-outline-primary">View Portfolio</button></a>
-{% endfor %}
+<div class=jumbotron>
+    <h1>Portfolio Links</h1>
+    <div class="row">
+        {% for user in users %}
+        <div class="col-md-4 mb-3">
+            <p>{{user.first_name}} {{user.last_name}}
+            <a href="{% url 'user_profile' user.id %}"><button type="button" class="btn btn-outline-primary">View
+                     Portfolio</button></a>
+            </p>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
