--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 <div class="jumbotron">
-    <h1 class="display-4">{{user.first_name}} {{user.last_name}} <small class="text-muted">({{user.username}})</small></h1>
+    <h1 class="display-4">{{user.first_name}} {{user.last_name}} <small class="text-muted">({{user.username}})</small>
+    </h1>
     <h4>Profession: {{user.portfolio.profession}}</h4>
     <h4>About Me: {{user.portfolio.about_me}}</h4>
     <p>Email: {{user.email}}</p>
@@ -10,5 +11,36 @@
     <p>Github Link: <a href="{{user.portfolio.github_link}}">{{user.portfolio.github_link}}</a></p>
     <img class="responsive-img" src="{{user.portfolio.photo_url}}">
 </div>
+<div class="container">
+    <h1 class="title">Projects</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+            </div>
+        </div>
 
+    </div>
+</div>
 {% endblock %}
