--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -6,12 +6,14 @@
     <h1>Portfolio Links</h1>
     <div class="row">
         {% for user in users %}
+        {% if user.portfolio != "" %}
         <div class="col-md-4 mb-3">
             <p>{{user.first_name}} {{user.last_name}}
             <a href="{% url 'user_profile' user.id %}"><button type="button" class="btn btn-outline-primary">View
                      Portfolio</button></a>
             </p>
         </div>
+        {% endif %}
         {% endfor %}
     </div>
 </div>
