--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -28,8 +28,12 @@
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer d-flex justify-content-between">
                     <small class="text-muted">Last updated 3 mins ago</small>
+                    <div>
+                        <a href=""><button class="btn btn-outline-info">Edit</button></a>
+                        <a href=""><button class="btn btn-outline-danger">Delete</button></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -41,8 +45,13 @@
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="card-footer">
+                <div class="card-footer d-flex justify-content-between">
                     <small class="text-muted">Last updated 3 mins ago</small>
+                    <div>
+                        <a href=""><button class="btn btn-outline-info">Edit</button></a>
+                        <a href=""><button class="btn btn-outline-danger">Delete</button></a>
+                    </div>
+
                 </div>
             </div>
         </div>
