--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -4,6 +4,7 @@
 <h1>Carousel</h1>
 <div class=jumbotron>
     <h1>Portfolio Links</h1>
+    {% if user != "" %}
     <div class="row">
         {% for user in users %}
         {% if user.portfolio != "" %}
@@ -16,5 +17,8 @@
         {% endif %}
         {% endfor %}
     </div>
+    {% else %}
+    <h2>There are no users with portfolios</h2>
+    {% endif %}
 </div>
 {% endblock %}
