--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -50,7 +50,7 @@
                         <a class="dropdown-item" href="{% url 'portfolio_create' %}">
                             <i class="fas fa-plus"></i> Portfolio</a>
                         {% else %}
-                        <a class="dropdown-item" href="">
+                        <a class="dropdown-item" href="{% url 'portfolio_update' request.user.portfolio.id %}">
                             <i class="fas fa-edit"></i> Portfolio</a>
                         {% endif %}
                         <a class="dropdown-item" href="" >
