add _photo for portfolio  works

--- a/main_app/templates/main_app/portfolio_detail.html
+++ b/main_app/templates/main_app/portfolio_detail.html
@@ -17,7 +17,7 @@
     {{portfolio.about_me}}
 </div>
 
-<form method="POST" action="{% url 'add_photo' portfolio.id %}" enctype="multipart/form-data">
+<form method="POST" action="{% url 'portfolio_add_photo' portfolio.id %}" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="file" name="photo-file">
     <br>
