--- a/main_app/templates/main_app/portfolio_form.html
+++ b/main_app/templates/main_app/portfolio_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="container">
 {% if object %}
     <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
   {% else %}
@@ -19,6 +20,6 @@
 
     <input type="submit" class="btn btn-outline-primary" value="Submit">
 </form>
-
+</div>
 
 {% endblock %}
