--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -53,7 +53,7 @@
                         <a class="dropdown-item" href="">
                             <i class="fas fa-edit"></i> Portfolio</a>
                         {% endif %}
-                        <a class="dropdown-item" href="{% url 'projects_index' %}" >
+                        <a class="dropdown-item" href="{% url 'user_profile' %}" >
                             <i class="fas fa-plus"></i> Project</a>
                         <a class="dropdown-item" href="{% url 'logout' %}">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i
