adds html code for projects

--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -16,6 +16,9 @@
         <br>
         <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
     </form>
+    <form method="POST" action="">
+        <input type="submit" value="Add Project">
+    </form>
 </div>
 <div class="container">
     <h1 class="title">Projects</h1>
