--- a/main_app/templates/main_app/project_form.html
+++ b/main_app/templates/main_app/project_form.html
@@ -8,7 +8,7 @@
         <h1>Add Project</h1>
     {% endif %}
 
-    <form action="" method="post">
+    <form action="" method="POST">
         {% csrf_token %}
         <table>
             {{ form.as_table }}
