home page styling partially updated

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -10,3 +10,8 @@ main.container-fluid {
 .title {
     text-align: center;
 }
+
+#home-project-container {
+    margin: 100px;
+    padding: 200px;
+}
