--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>Carousel</h1>
 <div class=jumbotron>
     
     <h1>Portfolio Links</h1>
@@ -19,7 +17,85 @@
         {% endfor %}
     </div>
     {% else %}
-    <h2>There are no users with portfolios</h2>
+        <h2>There are no users with portfolios</h2>
     {% endif %}
+
 </div>
+
+    
+<div class="container" id="home-project-container">
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                <h5 class="card-title">Project Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Project owner</h6>
+                <p class="card-text">Project Description Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">link to portfolio page</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                <h5 class="card-title">Project Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Project owner</h6>
+                <p class="card-text">Project Description Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">link to portfolio page</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                <h5 class="card-title">Project Name</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Project owner</h6>
+                <p class="card-text">Project Description Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="card-link">link to portfolio page</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bd-example" id="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../static/images/tumble_sonnia.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Tumble</h5>
+            <p>By Sonnia</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../static/images/foodiegram_emily.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Foodiegram</h5>
+            <p>by Emily</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../static/images/cafe_madrid_samanatha.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 {% endblock %}
