--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -53,8 +53,10 @@
                         <a class="dropdown-item" href="{% url 'portfolio_update' request.user.portfolio.id %}">
                             <i class="fas fa-edit"></i> Portfolio</a>
                         {% endif %}
-                        <a class="dropdown-item" href="{% url 'projects_index' %}" >
+                        <a class="dropdown-item" href="{% url 'projects_create' %}" >
                             <i class="fas fa-plus"></i> Project</a>
+                            <a class="dropdown-item" href="{% url 'projects_index' %}" >
+                                     Projects List</a>
                         <a class="dropdown-item" href="{% url 'logout' %}">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i
                                     class="fas fa-sign-out-alt"></i> Logout</button>
