--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -47,7 +47,7 @@
                         <a class="dropdown-item" href="{% url 'user_profile' request.user.id %}">My Portfolio</a>
                         {% if request.user.portfolio == '' %}
                         <a class="dropdown-item" href="{% url 'portfolio_create' %}">
-                            <i class="fas fa-plus"></i> Portfolio</a>
+                            <i class="fas fa-plus"></i> Profile</a>
                         {% else %}
                         <a class="dropdown-item" href="{% url 'portfolio_update' request.user.portfolio.id %}">
                             <i class="fas fa-edit"></i> Portfolio</a>
