--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="jumbotron">
-    <h1>Log In</h1>
-
+<h1>Log In</h1>
+<div class="jumbotron" id="login-container">
 
     <form method="post" action="{% url 'login' %}">
 
