--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -10,32 +10,27 @@
     <div class="form-row">
         <div class="col-md-2 mb-3">
             <label for="first_name">First Name:</label>
-            <input class="form-control" type="text" name="first_name" required>
+            <input type="text" name="first_name" required>
         </div>
         <div class="col-md-2 mb-3">
             <label for="last_name">Last Name:</label>
-            <input class="form-control" type="text" name="last_name" required>
+            <input type="text" name="last_name" required>
         </div>
         <div class="col-md-4 mb-3">
             <label for="email">Email:</label>
-            <input class="form-control" type="email" name="email" required>
+            <input type="email" name="email" required>
         </div>
     </div>
 
 
     <div class="form-row">
-            <div class="col-md-8 mb-3">
-    {% for field in form %}
-               
-            {{field.label_tag}}    {{field}}
-
-  
-        {{ field.help_text }}
-        {{ field.errors }}
-    
-    {% endfor %}
-   
-</div>
+        <div class="col-md-8 mb-3">
+            {% for field in form %} 
+                {{field.label_tag}}    {{field}}
+                {{ field.help_text }}
+                {{ field.errors }}
+            {% endfor %}
+        </div>
     </div>
     <input type="submit" class="btn btn-outline-primary" value="Sign Up">
 </form>
