adding search bar

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -31,8 +31,13 @@
             <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-briefcase"></i> Briefcase</a>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="form-inline my-2 my-lg-0" method="get" action="">
+                        {% csrf_token %}
+                        <input class="form-control mr-1" name="search_content" type="search" placeholder="Search" aria-label="Search">
+                        <select class="custom-select custom-select-md mr-2" name="option"  required>
+                                <option value="profession" selected>profession</option>
+                                <option value="technologies">technologies</option>
+                            </select>
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 </li>
