--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <div class="container">
     <div class="row" id="carousel-row">
         <div class="col-2"></div>
@@ -35,15 +36,13 @@
             </div>
             
                 <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                    <div class="arrow-bg">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    </div>
+                    <span class="fas fa-angle-left" id="arrow-left" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
             
             <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
                 
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="fas fa-angle-right" id="arrow-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
             </div>
