--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -45,27 +45,31 @@
         {% for p in projects %}
         <div class="col-md-6 mb-4">
             <div class="card">
-                    {% if user.portfolio.photo_url %}
-                    <img class="responsive-img card-img-top" src="{{p.photo_url}}" alt="Project Photo">
-                    {% else %}
+                {% if user.portfolio.photo_url %}
+
+                        <img class="responsive-img card-img-top" id="project-img" src="{{p.photo_url}}" alt="Project Photo">
+
+                {% else %}
                     <img class="responsive-img " src="" alt="Project_Photo">
-                    {% endif %}
+                {% endif %}
+                <div id="project-info">
                     {% if request.user == user %}
-                    <form method="POST" action="{% url 'projects_add_photo' p.id %}" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <input type="file" name="photo-file">
-                        <br>
-                        <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
-                        <a class="btn btn-outline-danger mt-2" href="{% url 'projects_delete_photo' p.id %}">Delete Photo</a>
-                    </form>
+                        <form method="POST" action="{% url 'projects_add_photo' p.id %}" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <input type="file" name="photo-file">
+                            <br>
+                            <input type="submit" class="btn btn-outline-success mt-2" value="Upload Photo">
+                            <a class="btn btn-outline-danger mt-2" href="{% url 'projects_delete_photo' p.id %}">Delete Photo</a>
+                        </form>
                     {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">{{p.project_name}}</h5>
-                    <p class="card-text">{{p.description}}</p>
-                    <p class="card-text">Technologies Used: {{p.technologies}}</p>
-                    <div class="d-flex justify-content-around">
-                        <a class="btn btn-outline-primary" href="{{p.project_link}}">Github</a>
-                        <a class="btn btn-outline-primary" href="{{p.deployed_link}}">View Project</a>
+                    <div class="card-body">
+                        <h5 class="card-title">{{p.project_name}}</h5>
+                        <p class="card-text">{{p.description}}</p>
+                        <p class="card-text">Technologies Used: {{p.technologies}}</p>
+                        <div class="d-flex justify-content-around">
+                            <a class="btn btn-outline-primary" href="{{p.project_link}}">Github</a>
+                            <a class="btn btn-outline-primary" href="{{p.deployed_link}}">View Project</a>
+                        </div>
                     </div>
                 </div>
                 <div class="card-footer d-flex justify-content-between">
