--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -46,15 +46,14 @@
         <div class="col-md-6 mb-4">
             <div class="card">
                 {% if user.portfolio.photo_url %}
-
-                        <img class="responsive-img card-img-top" id="project-img" src="{{p.photo_url}}" alt="Project Photo">
-
+                    <img class="responsive-img card-img-top" id="project-img" src="{{p.photo_url}}" alt="Project Photo">
                 {% else %}
                     <img class="responsive-img " src="" alt="Project_Photo">
                 {% endif %}
                 <div id="project-info">
                     {% if request.user == user %}
-                        <form method="POST" action="{% url 'projects_add_photo' p.id %}" enctype="multipart/form-data">
+                        <a class="btn btn-outline-primary" data-toggle="collapse" data-target="#img-upload">Edit Photo</a>
+                        <form method="POST" action="{% url 'projects_add_photo' p.id %}" enctype="multipart/form-data" id="img-upload" class="collapse" >
                             {% csrf_token %}
                             <input type="file" name="photo-file">
                             <br>
