--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -72,6 +72,12 @@ h3 {
     flex-direction: row;
 }
 
+.navbar {
+    box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
+    border-radius: 10px;
+
+}
+
 
 
 
