--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,59 +1,21 @@
+/* Colors */
 :root {
-	--primary: #7f170e;
-	--secondary: hsla(31, 64%, 90%, 1);
-	--pink: hsla(0, 64%, 82%, 0.21);
-	--green: #8da54a;
-	--orange: #e1772e;
-	--offwhite:
+    --secondary: hsla(31, 64%, 90%, 1);
+    --beige: #ECE9E1;
+    --tan: #D3C8B3;
+    --darkBrown: #493C2C;
+    --blue: rgb(193, 219, 217);
+    --darkerblue: rgb(36, 107, 101);
+    --firstblue: rgb(193, 240, 236);
+    --lighterblue: rgb(219, 243, 241);
+    --lightblue: hsl(200, 50%, 90%);
 }
-
-main.container-fluid {
-    padding: 0;
-}
-
-
-.title {
-    text-align: center;
-}
-
-
-
-
-/* Element styles (inputs, buttons, jumbotron*/
-input {
-    border: 1px solid aquamarine;
-    border-radius: 2px;
-}
-
-.btn {
-    padding: 5px 20px;
-}
-
-.btn-primary {
-    background-color: olivedrab;
-    border: 1px solid aquamarine;
-}
-
-.btn-primary:hover {
-    background-color: mediumaquamarine;
-    border: 1px solid aquamarine;
-}
-
-/* Nav buttons */
-.btn-group {
-    margin-left: 30px;
-}
-
-.jumbotron {
-    background-color: mintcream;
-}
-
 
 
 /* Font Styles */
 
 h1 {
-    padding-bottom: 20px;
+    padding: 20px 30px;
     font-family: 'Manjari', serif;
     font-weight: bold;
 }
@@ -63,6 +25,65 @@ h3 {
     font-weight: bold;
     font-size: 20px;
 }
+
+main.container-fluid {
+    padding: 0;
+}
+
+.title {
+    text-align: center;
+}
+
+
+/* form styles */
+
+.form-style {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 700px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: var(--lighterblue);
+    border-radius: 6px;
+}
+
+input {
+    border: 1px solid aquamarine;
+    border-radius: 2px;
+}
+
+label {
+    font-weight: 200;
+}
+
+
+
+/* Buttons styling */
+
+
+.btn {
+    padding: 5px 20px;
+    background-color: white;
+}
+
+.btn-outline-primary {
+    border: 1px solid var(--darkerblue);
+    color: var(--darkerblue)
+}
+
+.btn-outline-primary:hover {
+    background-color: var(--firstblue);
+    border: 1px solid aquamarine;
+    color: black;
+}
+
+/* Nav buttons */
+.btn-group {
+    margin-left: 30px;
+}
+
+
 
 
 
@@ -75,6 +96,19 @@ h3 {
 .form-group input{
     width: 100%;
 }
+
+nav {
+    background-color: var(--firstblue);
+}
+
+
+
+
+
+.jumbotron {
+    background-color: mintcream;
+}
+
 
 
 
@@ -138,3 +172,14 @@ h3 {
 #project-info {
     padding: 10px;
 }
+
+.card-footer {
+    background-color: var(--lighterblue);
+}
+
+
+
+
+
+
+
