--- a/main_app/templates/main_app/portfolio_form.html
+++ b/main_app/templates/main_app/portfolio_form.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container">
+
 {% if object %}
     <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
   {% else %}
     <h1>Add Portfolio</h1>
   {% endif %}
-<form method="post" action="">
+  <div class="container">
+<form method="post" action="" class="form-style">
     {% csrf_token %}
     {% for field in form %}
     <div class="form-group">
