--- a/main_app/templates/main_app/project_form.html
+++ b/main_app/templates/main_app/project_form.html
@@ -8,13 +8,15 @@
         <h1>Add Project</h1>
     {% endif %}
 
-    <form action="" method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-        </table>
-        <input type="submit" value="Submit">
-    </form>
+    <div id="project-form-box">
+        <form action="" method="post" class="form-style">
+            {% csrf_token %}
+            <table>
+                {{ form.as_table }}
+            </table>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
 
 
 {% endblock %}
