--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,11 +7,10 @@
 
 <div class=jumbotron>
     <h1>Portfolio Links</h1>
-    
-    {% if user != "" %}
+    {% if user %}
     <div class="row">
         {% for user in users %}
-        {% if user.portfolio != "" %}
+        {% if user.portfolio %}
         <div class="col-md-4 mb-3 home-portfolio-links">
             <h3>{{user.first_name}} {{user.last_name}}</h3>
             <p>{{user.portfolio.profession}}</p>
