--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -66,14 +66,17 @@ input:focus, textarea:focus {
     border: 2px solid var(--firstblue);
 }
 
-
+input[type=file] {
+    max-width: 300px;
+}
 
 /* Buttons styling */
 
 
 .btn {
-    padding: 5px 20px;
+    padding: 5px 15px;
     background-color: white;
+    max-width: 138px;
 }
 
 .btn-outline-primary, .btn-primary {
@@ -201,8 +204,12 @@ nav {
     width: 100%;
 }
 
+
 .profile-icon {
     font-size: 4em;
+    background-color: aliceblue;
+    height: 140px;
+    width: 140px;
 }
 
 #project-img {
