--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -128,6 +128,17 @@ nav {
 
 }
 
+#dropdown {
+    padding:.5rem 0 0 0;
+}
+
+
+
+
+
+hr {
+    margin: 0;
+}
 
 .jumbotron {
     background-color: mintcream;
