--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -89,7 +89,7 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer id="footer">
+    <footer id="footer" class="mt-auto py-3">
         <div>
             <i class="fas fa-briefcase"></i> Briefcase by Emily, Samantha, Sonnia 
             <a href="https://github.com/emilyc729/mybriefcase/" target="_blank"><i class="fab fa-github"></i></a>
