--- a/main_app/templates/main_app/user_profile.html
+++ b/main_app/templates/main_app/user_profile.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container mb-5">
     <h1 class="title">Projects</h1>
     <div class="row">
         
